--- a/public/css/elements/_default.sass
+++ b/public/css/elements/_default.sass
@@ -1,11 +1,12 @@
-$fontRegular: 'Source Sans Pro', sans-serif
+$fontRegular: 'Playfair Display', serif
 $fontSerif: 'Merriweather', serif
+$fontSansSerif: 'Source Sans Pro', sans-serif
 
 
 $colorBody: #F2F2F2
 $colorWhite: #fff
 $colorDark: #333333
-$colorTheme: #00a9e1
+$colorTheme: #98b96a
 
 html
   font-size: 56%
