--- a/public/css/elements/editorialComment.sass
+++ b/public/css/elements/editorialComment.sass
@@ -22,8 +22,8 @@
     font-style: normal
     display: block
   .editorialComment__article
-    color: #a3d7f0
+    color: #dcefc2
     margin-left: 20px
     a
-      color: #a3d7f0
-      border-bottom: 1px dotted #a3d7f0
+      color: #dcefc2
+      border-bottom: 1px dotted #dcefc2
