--- a/public/css/elements/topBar.sass
+++ b/public/css/elements/topBar.sass
@@ -1,19 +1,10 @@
 .topBar
   font-size: 1.4rem
-  background: $colorDark
-  color: $colorWhite
+  color: $colorDark
   p, a
-    color: #fff
+    color: $colorDark
     font-weight: 400
     letter-spacing: 0.2px
-  .topBar__weather
-    p
-      font-family: $fontRegular
-      font-size: 1.4rem
-      margin: 10px 0px
-      img
-        height: 25px
-        margin-right: 15px
   .topBar__links
     ul
       text-align: right
