--- a/public/css/elements/trendingTopics.sass
+++ b/public/css/elements/trendingTopics.sass
@@ -1,4 +1,5 @@
 .trendingTopics
+  font-family: $fontSansSerif
   text-transform: uppercase
   ul
     list-style: none
@@ -7,7 +8,7 @@
     &.trendingTopics__items
       li:first-child
         padding: 10px 15px
-        background: #ea545f
+        background: #98b96a
         color: $colorWhite
     li
       font-size: 1.8rem
