--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -1,6 +1,14 @@
 .header
   font-size: 0
   margin: 40px 0px
+  .header__weather
+    p
+      font-family: $fontRegular
+      font-size: 1.4rem
+      margin: 10px 0px
+      img
+        height: 25px
+        margin-right: 15px
   .header__logo
     display: block
     font-size: 1.8rem
