--- a/public/css/elements/stripBox.sass
+++ b/public/css/elements/stripBox.sass
@@ -13,23 +13,12 @@
     &:hover
       background: #888
     &.active
-      background: $colorTheme
+      background: #758d99
       border-bottom: none
       text-decoration: none
-      &:before
-        content: " "
-        display: block
-        position: absolute
-        bottom: -9px
-        left: 0px
-        width: 0
-        height: 0
-        border-style: solid
-        border-width: 0 9px 9px 0
-        border-color: transparent #007aa3 transparent transparent
 
   .stripBox__sectionContent
-    margin: 0px 10px
+    margin: 0px
     // box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1)
     // border-left: 1px solid rgba(0, 0, 0, 0.1)
     //border-right: 1px solid rgba(0, 0, 0, 0.1)
