--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -22,7 +22,7 @@
 
   <link rel="shortcut icon" href="{{ asset('theme/img/favicon.ico') }}">
 
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900|Source+Sans+Pro:300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900|Source+Sans+Pro:300,400,600,700&amp;subset=latin-ext|Playfair+Display:400,700,900" rel="stylesheet">
 
   <link rel="stylesheet" href="/public/dist/style.css" />
 
@@ -53,8 +53,8 @@
     <div class="container">
       <div class="row">
 
-        <div class="topBar__weather col-sm-3 col-md-3 col-xs-3">
-          <p><img src="" class="weather-icon" alt="Weather Icon" /><span class="weather-temperature"></span>, <span class="weather-place"></span></p>
+        <div class="col-sm-3 col-md-3 col-xs-3">
+          <p>All sections</p>
         </div>
 
         <div class="topBar__links col-sm-7 col-md-7 col-xs-7">
@@ -84,11 +84,15 @@
 
       <div class="row">
 
-        <div class="verticalMiddle col-md-5 col-sm-5 col-xs-12">
+        <div class="header__weather verticalMiddle col-md-4 col-sm-4 col-xs-12">
+          <p><img src="" class="weather-icon" alt="Weather Icon" /><span class="weather-temperature"></span>, <span class="weather-place"></span></p>
+        </div>
+
+        <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
           <a class="header__logo" href="{{ url('home') }}"><img src="{{ asset('theme/img/logo.svg') }}"></a>
         </div>
 
-        <div class="header__search verticalMiddle col-sm-7 col-md-7 col-xs-12">
+        <div class="header__search verticalMiddle col-sm-4 col-md-4 col-xs-12">
         
           <!--form id="search" name="search_articles" method="GET" action="/search">
             <input type="text" name="q" placeholder="search" value="">
