--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -7,7 +7,7 @@
   Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>{% block title %}Daily News Theme for Superdesk Publisher{% endblock %}</title>
+  <title>{% block title %}Star Theme for Superdesk Publisher{% endblock %}</title>
   <meta name="author" content="Sourcefabric">
 
   <meta name="description" content="Superdesk Publisher is state of the art publishing system.">
