--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -3,12 +3,17 @@
   margin: 40px 0px
   .header__weather
     p
-      font-family: $fontRegular
+      font-family: $fontSansSerif
       font-size: 1.4rem
       margin: 10px 0px
       img
         height: 25px
         margin-right: 15px
+  .weather-temperature
+    font-size: 3.5em
+    font-weight: 100
+  .weather-place
+    font-size: 1.15em
   .header__logo
     display: block
     font-size: 1.8rem
