--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -85,7 +85,7 @@
       <div class="row">
 
         <div class="header__weather verticalMiddle col-md-4 col-sm-4 col-xs-12">
-          <p><img src="" class="weather-icon" alt="Weather Icon" /><span class="weather-temperature"></span>, <span class="weather-place"></span></p>
+          <p><span class="weather-temperature"></span> <span class="weather-place"></span><img src="" class="weather-icon" alt="Weather Icon" /></p>
         </div>
 
         <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
