--- a/public/css/elements/_helpers.sass
+++ b/public/css/elements/_helpers.sass
@@ -19,6 +19,12 @@
 .noBorder
   border: none !important
 
+.leftCol
+  padding-right: 15px
+  &__item
+    padding-right: 30px
+    border-right: 1px dotted #cccccc
+
 @mixin mobileBorder()
   margin-bottom: 20px
   border-bottom: 1px dotted #cccccc
