--- a/public/css/elements/articleGrid.sass
+++ b/public/css/elements/articleGrid.sass
@@ -51,6 +51,7 @@
     -webkit-filter: drop-shadow( 1px 1px 4px rgba(0,0,0,.4) )
     filter: drop-shadow( 1px 1px 4px rgba(0,0,0,.4) )
   .articleGrid__kicker
+    font-family: $fontSansSerif
     font-size: 1.4rem
     color: #ea545f
     text-transform: uppercase
