--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -1,6 +1,5 @@
 .mainArticle
   position: relative
-  color: $colorWhite
   margin-bottom: 20px
   border-bottom: 1px dotted #cccccc
   padding-bottom: 20px
@@ -9,9 +8,6 @@
     border-bottom: none
     padding-bottom: 0px
 
-  p, a
-    +sm
-      color: $colorWhite
   .mainArticle__image
     padding-bottom: 51%
     z-index: 1
@@ -43,26 +39,19 @@
   .mainArticle__text
     font-size: 1.6rem
     +sm
-      position: absolute
-      left: 55px
-      right: 35px
-      bottom: 30px
       max-width: 690px
-      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5)
 
   .mainArticle__kicker
+    font-family: $fontSansSerif
     font-size: 1.4rem
-    font-weight: 900
+    font-weight: 600
     color: #ea545f
     display: block
     text-transform: uppercase
-    margin-top: 20px
-    +sm
-      color: $colorWhite
-      margin-top: 0px
+    margin-top: 10px
   .mainArticle__headline
-    font-size: 3.9rem
-    font-weight: 900
-    margin: 12px 0px
+    font-size: 3.4rem
+    font-weight: 600
+    margin: 10px 0px
     &--small
       font-size: 3.2rem
