--- a/views/partials/mainArticle.html.twig
+++ b/views/partials/mainArticle.html.twig
@@ -50,9 +50,9 @@
             </div>
           {% endif %}
             <div class="articleMetadata">
-              <span class="articleMetadata__byline articleMetadata__byline--white">by <a href="#">{{article.metadata.byline}}</a></span>
-              <a class="articleMetadata__shares articleMetadata__info articleMetadata__info--white" href="#">240</a>
-              <a class="articleMetadata__comments articleMetadata__info articleMetadata__info--white" href="#">20</a>
+              <span class="articleMetadata__byline">by <a href="#">{{article.metadata.byline}}</a></span>
+              <a class="articleMetadata__shares articleMetadata__info" href="#">240</a>
+              <a class="articleMetadata__comments articleMetadata__info" href="#">20</a>
             </div>
           </div>
         </article>
