--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -22,7 +22,7 @@
 
   <link rel="shortcut icon" href="{{ asset('theme/img/favicon.ico') }}">
 
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900|Source+Sans+Pro:300,400,600,700&amp;subset=latin-ext|Playfair+Display:400,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900|Source+Sans+Pro:200,300,400,600,700&amp;subset=latin-ext|Playfair+Display:400,700,900" rel="stylesheet">
 
   <link rel="stylesheet" href="/public/dist/style.css" />
 
@@ -39,15 +39,17 @@
   fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));</script>
 
-  <script>(function() {
-    var cx = '001959388472599317396:-zwezp41wak';
+<script>
+  (function() {
+    var cx = '001959388472599317396:kn-x-ndaexq';
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
     gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(gcse, s);
-  })();</script>
+  })();
+</script>
 
   <div class="topBar">
     <div class="container">
@@ -85,7 +87,7 @@
       <div class="row">
 
         <div class="header__weather verticalMiddle col-md-4 col-sm-4 col-xs-12">
-          <p><span class="weather-temperature"></span> <span class="weather-place"></span><img src="" class="weather-icon" alt="Weather Icon" /></p>
+          <p><span class="weather-temperature"></span> <span class="weather-place"></span> <span class="weather-description"></span> <img src="" class="weather-icon" alt="Weather Icon" /></p>
         </div>
 
         <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
