--- a/views/search.html.twig
+++ b/views/search.html.twig
@@ -6,8 +6,18 @@
 	<main class="container">
 		<div class="row">
 			<div class="article article--noMargin col-md-9 col-sm-12 col-xs-12">
-
-				<gcse:searchresults-only></gcse:searchresults-only>
+<script>
+  (function() {
+    var cx = '001959388472599317396:kn-x-ndaexq';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:searchresults-only></gcse:searchresults-only>
 
 			</div>
 		</div>
