--- a/public/css/elements/accordion.sass
+++ b/public/css/elements/accordion.sass
@@ -45,6 +45,7 @@
     &:last-child
       border-bottom: none
   .accordion__sectionHeadline
+    @include letterSpacing()
     font-size: 1.8rem
     font-weight: 700
     margin-top: 0px
