--- a/public/css/elements/articleGrid.sass
+++ b/public/css/elements/articleGrid.sass
@@ -61,6 +61,7 @@
     +sm
       margin: 15px 0px 5px 0px
   .articleGrid__headline
+    @include letterSpacing()
     font-size: 2.1rem
     font-weight: 700
     margin: 5px 0px 10px 0px
