--- a/public/css/elements/articleListSmall.sass
+++ b/public/css/elements/articleListSmall.sass
@@ -6,10 +6,31 @@
   .articleListSmall__image
     float: left
     margin-right: 20px
+
   .articleListSmall__headline
+    @include letterSpacing()
     font-size: 1.8rem
     font-weight: 700
     margin-top: 0px
     margin-bottom: 10px
+    +lg
+      margin-top: 0px
+      margin-left: 110px
     &:hover a
       color: $colorTheme
+
+.articleListSmall--latestNews
+  .articleListSmall__image
+    float: none
+    +lg
+      float: left
+      width: 90px
+    img
+      width: 100%
+      +lg
+        width: auto
+  .articleListSmall__headline
+    margin-top: 10px
+    +lg
+      margin-top: 0px
+      margin-left: 110px
