--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -26,16 +26,7 @@
     a
       position: relative
       display: block
-      &:after
-        background-image: linear-gradient(0deg, rgba(0,15,20,0.6) 15%,rgba(0,15,20,0.15) 52%,rgba(0,15,20,0) 70%)
-        display: none
-        content: " "
-        height: 240px
-        width: 100%
-        position: absolute
-        bottom: 0px
-        +sm
-          display: block
+
   .mainArticle__text
     font-size: 1.6rem
     +sm
@@ -50,6 +41,7 @@
     text-transform: uppercase
     margin-top: 10px
   .mainArticle__headline
+    @include letterSpacing()
     font-size: 3.4rem
     font-weight: 600
     margin: 10px 0px
