--- a/public/css/elements/opinions.sass
+++ b/public/css/elements/opinions.sass
@@ -48,6 +48,7 @@
       border-width: 21px 36px 0px 0px
       border-color: transparent #7d4864 transparent transparent
   .opinionsItem__headline
+    @include letterSpacing()
     font-size: 2.3rem
     font-weight: 700
     margin-top: 0px
