--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -29,12 +29,12 @@
 
             {% if loop.first and currentPage == 1 %}
 
-              {% cache 'newsArticle' {gen: article} %}
+              {# cache 'newsArticle' {gen: article} #}
 
               {% include 'partials/mainArticle.html.twig' with {'class' : ''} %}
 
 
-              {% endcache %}
+              {# endcache #}
 
               <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12 pull-right">
