--- a/public/css/elements/trendingTopics.sass
+++ b/public/css/elements/trendingTopics.sass
@@ -1,6 +1,7 @@
 .trendingTopics
   font-family: $fontSansSerif
   text-transform: uppercase
+  margin-bottom: 20px
   ul
     list-style: none
     padding-left: 0px
