--- a/public/css/elements/articleListSmall.sass
+++ b/public/css/elements/articleListSmall.sass
@@ -18,6 +18,9 @@
       margin-left: 110px
     &:hover a
       color: $colorTheme
+  .articleMetadata
+    +lg
+      margin-left: 110px
 
 .articleListSmall--latestNews
   .articleListSmall__image
