--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -1,19 +1,25 @@
 .header
   font-size: 0
-  margin: 40px 0px
+  margin: 20px 0px 40px 0px
   .header__weather
-    p
-      font-family: $fontSansSerif
-      font-size: 1.4rem
-      margin: 10px 0px
-      img
-        height: 25px
-        margin-right: 15px
+    font-family: $fontSansSerif
+    font-size: 1.4rem
+    margin: 10px 0px
+    display: flex
+    align-items: center
+    img
+      height: 25px
+      margin-right: 15px
+  .header__weather__info
+    margin: 0px 10px
   .weather-temperature
     font-size: 3.5em
     font-weight: 200
   .weather-place
     font-size: 1.15em
+  .weather-description
+    font-size: 1.15em
+    text-transform: capitalize
   .header__logo
     display: block
     font-size: 1.8rem
