--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -22,7 +22,7 @@
 
   <link rel="shortcut icon" href="{{ asset('theme/img/favicon.ico') }}">
 
-  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900|Source+Sans+Pro:200,300,400,600,700&amp;subset=latin-ext|Playfair+Display:400,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900|Playfair+Display:400,700,900|Source+Sans+Pro:200,300,400,600,700" rel="stylesheet">
 
   <link rel="stylesheet" href="/public/dist/style.css" />
 
@@ -86,8 +86,13 @@
 
       <div class="row">
 
-        <div class="header__weather verticalMiddle col-md-4 col-sm-4 col-xs-12">
-          <p><span class="weather-temperature"></span> <span class="weather-place"></span> <span class="weather-description"></span> <img src="" class="weather-icon" alt="Weather Icon" /></p>
+        <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
+          <p class="header__weather"><span class="weather-temperature"></span>
+          <span class="header__weather__info">
+            <span class="weather-place"></span> <br>
+            <span class="weather-description"></span>
+          </span>
+          <img src="" class="weather-icon" alt="Weather Icon" /></p>
         </div>
 
         <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
