--- a/views/article.html.twig
+++ b/views/article.html.twig
@@ -55,7 +55,7 @@
 					{% if gimme.article.featureMedia %}
 					  {% gimme rendition with { 'media': gimme.article.featureMedia, 'name': '1250x600', 'fallback': 'original' } %}
 					    {% set rend1250 = path(rendition) %}
-					    {% set imgCaption = article.featureMedia.description %}
+					    {% set imgCaption = gimme.article.featureMedia.description %}
 					  {% endgimme %}
 					{% endif %}
 
