--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -20,7 +20,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="shortcut icon" href="{{ asset('theme/img/favicon.ico') }}">
+  <link rel="shortcut icon" href="/public/img/icons/favicon.ico" />
 
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900|Playfair+Display:400,700,900|Source+Sans+Pro:200,300,400,600,700" rel="stylesheet">
 
@@ -142,7 +142,7 @@
           <ul class="trendingTopics__items">
             <li>Trending topics</li>
             {% for topic in trendingTopics %}
-            <li><a href="{{ url('trending') }}?topic={{ topic }}">{{ topic }}</a></li>
+            <li><a href="{{ url('trending') }}?topic={{ topic|lower }}">{{ topic }}</a></li>
             {% endfor %}
           </ul>
         </nav>
