--- a/public/css/elements/articleListSmall.sass
+++ b/public/css/elements/articleListSmall.sass
@@ -17,7 +17,7 @@
       margin-top: 0px
       margin-left: 110px
     &:hover a
-      color: $colorTheme
+      color: #658da2
   .articleMetadata
     +lg
       margin-left: 110px
