--- a/public/css/elements/articleMetadata.sass
+++ b/public/css/elements/articleMetadata.sass
@@ -1,6 +1,7 @@
 .articleMetadata
   font-family: $fontSansSerif
   font-size: 1.4rem
+  font-weight: 400
   .articleMetadata__byline
     margin-right: 20px
     color: $colorDark
