--- a/public/css/elements/footer.sass
+++ b/public/css/elements/footer.sass
@@ -42,6 +42,7 @@
       width: 64%
       height: 42px
     button
+      font-family: $fontSerif
       width: auto
       float: left
       width: 36%
@@ -49,7 +50,6 @@
       padding: 11px 20px
   .footer__text
     a, p
-      font-family: $fontRegular
       font-size: 1.4rem
       text-align: left
       +sm
