--- a/public/css/elements/gallery.sass
+++ b/public/css/elements/gallery.sass
@@ -1,7 +1,11 @@
 .gallery
+  clear: both
   p, a
     +sm
       color: $colorWhite
+  h2
+    font-family: $fontSerif
+    font-size: 2rem !important
   .gallery__image
     padding-bottom: 48%
     height: 0px
