--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -45,5 +45,7 @@
     font-size: 3.4rem
     font-weight: 600
     margin: 10px 0px
+    &:hover
+      color: #658da2
     &--small
       font-size: 3.2rem
