--- a/public/css/elements/accordion.sass
+++ b/public/css/elements/accordion.sass
@@ -35,7 +35,7 @@
     border-bottom: 1px dotted #cccccc
     &:after
       position: absolute
-      top: -15px
+      top: -35px
       right: 10px
       font-size: 10rem
       color: #ededed
@@ -51,7 +51,7 @@
     margin-top: 0px
     margin-bottom: 5px
     &:hover a
-      color: $colorTheme
+      color: #658da2
   .accordion__sectionCount
     font-family: $fontSansSerif
     font-size: 1.4rem
