--- a/public/css/elements/opinions.sass
+++ b/public/css/elements/opinions.sass
@@ -29,6 +29,7 @@
       border-radius: 50%
       overflow: hidden
   .opinions__author
+    font-family: $fontSansSerif
     background: #be6895
     padding: 10px 30px
     color: $colorWhite
@@ -55,7 +56,7 @@
     margin-bottom: 15px
     transition: 0.2s color
     &:hover
-      color: $colorTheme
+      color: #658da2
   .opinionsItem--small
     text-align: left
   .opinionsItem__image--small
