--- a/views/article.html.twig
+++ b/views/article.html.twig
@@ -17,6 +17,7 @@
 
 			<div class="article col-md-9 col-sm-12 col-xs-12">
 				<article>
+				
   {% set articleKicker = null %}
   {% for keyword in gimme.article.keywords %}
     {% if loop.first %}
@@ -94,7 +95,7 @@
 						<ul class="article__keywords">
 							<li>Keywords: </li>
     					{% endif %}	
-        					<li><a href="{{ url('trending') }}?kw={{ keyword }}">{{ keyword }}</a></li>
+        					<li><a href="{{ url('trending') }}?topic={{ keyword|lower }}">{{ keyword|lower }}</a></li>
     					{% if loop.last %}	
 						</ul>
 						{% endif %}
@@ -173,6 +174,19 @@ s.setAttribute('data-timestamp', +new Date());
         		{% endcontainer %}
 
 			</div>
+
+{# PREV / NEXT #}
+
+{% set currArt = gimme.article.id %}
+{% set artArray = [] %}
+
+{# cache 'prevNextArticle' { time:600 } %}
+{% gimmelist article from articles|order('publishedAt','desc') %}
+{% set artArray = artArray|merge(article.id) %}
+{% endgimmelist %}
+{% endcache %}
+
+{{ dump(artArray) #}
 
 			<div class="article__arrows">
 				<a class="article__arrowItem article__arrowItem--prev" href="#">
