--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -8,7 +8,7 @@
 						{% cache 'frontTop' { time:600 } %}
 				<div class="row">
 					<div class="col-md-8 col-sm-12 col-xs-12 pull-right">
-						{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') %}
+						{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {route: 28} %}
 							{% include 'partials/mainArticle.html.twig' %}
 						{% endgimmelist %}
 						<div class="articleGrid row">
