--- a/views/partials/mainArticle.html.twig
+++ b/views/partials/mainArticle.html.twig
@@ -48,15 +48,11 @@
               {% if articleKicker %}<span class="mainArticle__kicker">{{ articleKicker }}</span>{% endif %}
               <h2 class="mainArticle__headline">{{ article.title }}</h2>
             </a>
-            {% if deck!='none' %}
+            
             <div class="mainArticle__teaser">
-              <p>{% if foo is empty %}
-                    {{ article.body|striptags|safeTruncate(200,"...") }}
-                  {%else%}
-                    {{ article.lead|striptags|safeTruncate(200,"...") }}
-                  {%endif%}</p>
+              <p>{{ article.lead|striptags|safeTruncate(200,"...") }}</p>
             </div>
-          {% endif %}
+          
             <div class="articleMetadata">
               <span class="articleMetadata__byline">by <a href="#">{{article.metadata.byline}}</a></span>
               <a class="articleMetadata__shares articleMetadata__info" href="#">240</a>
