--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -1,6 +1,8 @@
 .header
   font-size: 0
-  margin: 20px 0px 40px 0px
+  margin: 0px 0px 20px 0px
+  +sm
+    margin: 20px 0px 40px 0px
   .header__weather
     font-family: $fontSansSerif
     font-size: 1.4rem
@@ -12,9 +14,16 @@
       margin-right: 15px
   .header__weather__info
     margin: 0px 10px
+    br
+      display: none
+      +sm
+        display: block
   .weather-temperature
-    font-size: 3.5em
+    font-size: 2.5em
     font-weight: 200
+    +sm
+      font-size: 3.5em
+
   .weather-place
     font-size: 1.15em
   .weather-description
@@ -23,6 +32,10 @@
   .header__logo
     display: block
     font-size: 1.8rem
+    text-align: center
+    margin: 10px 0px
+    +sm
+      margin: 0px
     img
       max-width: 400px
 
