--- a/public/css/elements/navigation.sass
+++ b/public/css/elements/navigation.sass
@@ -19,3 +19,6 @@
 .navigation__header
   box-shadow: 0px 0px 4px rgba(0,0,0,0.1)
   border: 1px solid rgba(0, 0, 0, 0.1)
+
+.okayNav__menu-toggle.icon--active span
+  background: $colorTheme
