--- a/public/css/elements/topBar.sass
+++ b/public/css/elements/topBar.sass
@@ -6,6 +6,9 @@
     font-weight: 400
     letter-spacing: 0.2px
   .topBar__links
+    display: none
+    +sm
+      display: block
     ul
       text-align: right
       list-style: none
@@ -16,10 +19,12 @@
 
   .topBar__social
     ul
-      text-align: right
+      text-align: left
       list-style: none
       margin: 10px 0px
       padding-left: 0px
+      +sm
+        text-align: right
       li
         display: inline-block
         padding-left: 5px
