--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -95,9 +95,11 @@
           <img src="" class="weather-icon" alt="Weather Icon" /></p>
         </div>
 
+        {% block logo %}
         <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
           <a class="header__logo" href="{{ url('home') }}"><img src="{{ asset('theme/img/logo.svg') }}"></a>
         </div>
+        {% endblock %}
 
         <div class="header__search verticalMiddle col-sm-4 col-md-4 col-xs-12">
         
