--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -1,16 +1,18 @@
 {% extends 'base.html.twig' %}
 
+{% block logo %}
+        <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
+          <a class="header__logo" href="{{ url('home') }}"><img src="{{ asset('theme/img/logo.svg') }}"></a>
+          <h3 class="sectionHeadingBold marginTop10 noBorder">{{ gimme.route.name|capitalize }}</h3>
+        </div>
+{% endblock %}
+
 {% block body %}
 
   <main class="container">
     <div class="row">
 
       <div class="col-md-9 col-sm-12 col-xs-12">
-        <div class="row">
-          <div class="col-xs-12">
-            <h3 class="sectionHeadingBold marginTop10 noBorder">{{ gimme.route.name|capitalize }}</h3>
-          </div>
-        </div>
 
         {# Setup list and pagination parameters #}
             {% set defaultItemsPerPage, itemsPerPage, currentPage = 9, 9, app.request.get('page', 1) %}
