--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -8,11 +8,13 @@
 						{% cache 'frontTop' { time:600 } %}
 				<div class="row">
 					<div class="col-md-8 col-sm-12 col-xs-12 pull-right">
+						{% set topArt = null %}
 						{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {route: 28} %}
 							{% include 'partials/mainArticle.html.twig' %}
+							{% set topArt = article.id %}
 						{% endgimmelist %}
 						<div class="articleGrid row">
-						{% gimmelist article from articles|start(1)|limit(6)|order('publishedAt','desc') %}
+						{% gimmelist article from articles|start(0)|limit(6)|order('publishedAt','desc') if id != topArt %}
 							{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--twoColumns col-md-6 col-sm-6 col-xs-12'} %}
 						{% endgimmelist %}
 						{% endcache %}
