--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -32,7 +32,7 @@
 
               {% cache 'newsArticle' {gen: article} %}
 
-              {% include 'partials/mainArticle.html.twig' with {'class' : ''} %}
+              {% include 'partials/mainArticleSection.html.twig' with {'class' : ''} %}
 
               {% endcache %}
 
