--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -38,6 +38,17 @@
       margin: 0px
     img
       max-width: 400px
+    &--section
+      max-width: 170px
+      margin: 0 auto !important
+  .header__sectionName
+    font-family: $fontSerif
+    font-size: 4rem
+    color: #758d99
+    font-weight: 900
+    text-align: center
+    text-transform: uppercase
+    margin-bottom: 0px
 
   .header__search
     font-family: $fontSerif
