--- a/public/css/elements/_default.sass
+++ b/public/css/elements/_default.sass
@@ -6,6 +6,7 @@ $fontSansSerif: 'Source Sans Pro', sans-serif
 $colorBody: #F2F2F2
 $colorWhite: #fff
 $colorDark: #333333
+$colorGrey: #547688
 $colorTheme: #98b96a
 
 html
