--- a/public/css/elements/articleListSmall.sass
+++ b/public/css/elements/articleListSmall.sass
@@ -16,7 +16,7 @@
       margin-top: 0px
       margin-left: 110px
     &:hover a
-      color: #658da2
+      color: $colorGrey
   .articleMetadata
     +lg
       margin-left: 110px
