--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -46,6 +46,6 @@
     font-weight: 600
     margin: 10px 0px
     &:hover
-      color: #658da2
+      color: $colorGrey
     &--small
       font-size: 3.2rem
