--- a/public/css/elements/accordion.sass
+++ b/public/css/elements/accordion.sass
@@ -51,7 +51,7 @@
     margin-top: 0px
     margin-bottom: 5px
     &:hover a
-      color: #658da2
+      color: $colorGrey
   .accordion__sectionCount
     font-family: $fontSansSerif
     font-size: 1.4rem
