--- a/public/css/elements/gallery.sass
+++ b/public/css/elements/gallery.sass
@@ -7,9 +7,21 @@
     font-family: $fontSerif
     font-size: 2rem !important
   .gallery__image
-    padding-bottom: 48%
+    position: relative
+    padding-bottom: 48.2%
     height: 0px
+    &:after
+      background-image: linear-gradient(0deg, rgba(0,15,20,0.6) 15%,rgba(0,15,20,0.15) 52%,rgba(0,15,20,0) 70%)
+      display: block
+      content: " "
+      height: 240px
+      width: 100%
+      position: absolute
+      bottom: 0px
+    img
+      width: 100%
   .gallery__strip
+    font-family: $fontSansSerif
     font-size: 1.7rem
     font-weight: 700
     color: $colorWhite
@@ -18,18 +30,8 @@
     background: $colorTheme
     padding: 4px 18px
     top: 20px
-    right: 6px
-    &:after
-      content: " "
-      display: block
-      position: absolute
-      bottom: -9px
-      right: 0px
-      width: 0
-      height: 0
-      border-style: solid
-      border-width: 9px 9px 0 0
-      border-color: #007aa3 transparent transparent transparent
+    right: 20px
+    
   .gallery__text
     +sm
       position: absolute
