--- a/public/css/elements/opinions.sass
+++ b/public/css/elements/opinions.sass
@@ -56,7 +56,7 @@
     margin-bottom: 15px
     transition: 0.2s color
     &:hover
-      color: #658da2
+      color: $colorGrey
   .opinionsItem--small
     text-align: left
   .opinionsItem__image--small
