--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -7,6 +7,8 @@
     margin-bottom: 30px
     border-bottom: none
     padding-bottom: 0px
+  &--section
+    padding-bottom: 30px
 
   .mainArticle__image
     padding-bottom: 51%
@@ -40,6 +42,9 @@
     display: block
     text-transform: uppercase
     margin-top: 10px
+    &--section
+      margin-top: 0px
+
   .mainArticle__headline
     @include letterSpacing()
     font-size: 3.4rem
