--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -12,6 +12,10 @@
     img
       height: 25px
       margin-right: 15px
+      opacity: 0.6
+      image-rendering: -moz-crisp-edges
+      image-rendering: -webkit-optimize-contrast
+      -ms-interpolation-mode: nearest-neighbor
   .header__weather__info
     margin: 0px 10px
     br
