--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1486046430781' %}
+{% set version = '1495027581136' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -163,7 +163,7 @@
     <div class="row">
 
       <div class="footer__logo col-md-3 col-sm-3 col-xs-12">
-        <a href="#"><img src="{{ asset('theme/img/logo-white.svg') }}"></a>
+        <a href="{{ url('home') }}"><img src="{{ asset('theme/img/logo-white.svg') }}"></a>
       </div>
 
 {% container 'footerNav' %}
