--- a/public/css/elements/mainArticle.sass
+++ b/public/css/elements/mainArticle.sass
@@ -9,6 +9,11 @@
     padding-bottom: 0px
   &--section
     padding-bottom: 30px
+    display: flex
+    flex-direction: column-reverse
+    @media only screen and (min-width: 768px)
+      display: block
+
 
   .mainArticle__image
     padding-bottom: 51%
