--- a/public/css/elements/trendingTopics.sass
+++ b/public/css/elements/trendingTopics.sass
@@ -15,6 +15,8 @@
       font-size: 1.8rem
       font-weight: 600
       display: inline-block
-      margin-right: 40px
+      margin-right: 10px
+      +sm
+        margin-right: 40px
       a:hover
         color: $colorTheme
