--- a/views/page.html.twig
+++ b/views/page.html.twig
@@ -14,7 +14,7 @@
 					<div class="article__text article__text--noMargin marginTop30">
 						<p>{{ gimme.article.lead }}</p>
 
-						<p>{{ gimme.article.body }}</p>
+						<p>{{ gimme.article.body|raw }}</p>
 
 					</div>
 
