--- a/public/css/elements/sidebarMenu.sass
+++ b/public/css/elements/sidebarMenu.sass
@@ -1,4 +1,5 @@
 .sidebarMenu
+  font-family: $fontSansSerif
   overflow: hidden
   border-left: 2px solid #e6e6e6
   padding: 40px 0px 40px 60px
@@ -12,4 +13,4 @@
   a:hover
     color: #019bce
 .sidebarMenu__headline--active
-  border-bottom: 4px solid #00a9e1
+  border-bottom: 1px solid $colorTheme
