--- a/public/css/elements/topBar.sass
+++ b/public/css/elements/topBar.sass
@@ -1,4 +1,5 @@
 .topBar
+  font-family: $fontSansSerif
   font-size: 1.4rem
   color: $colorDark
   p, a
@@ -10,12 +11,12 @@
     +sm
       display: block
     ul
-      text-align: right
+      text-align: left
       list-style: none
       padding-left: 0px
       li
         display: inline-block
-        padding: 0px 15px
+        padding-right: 10px
 
   .topBar__social
     ul
