--- a/views/article.html.twig
+++ b/views/article.html.twig
@@ -50,6 +50,8 @@
 
 					</div>
 
+					<figure>
+
 					{% set imgCaption = "Default image" %}
 					{% set rend1250 = "/public/img/article_img/1250x600.png" %}
 
