--- a/public/css/elements/article.sass
+++ b/public/css/elements/article.sass
@@ -5,15 +5,22 @@
   line-height: 170%
   max-width: 830px
   p
-    font-size: 1.8rem
-    line-height: 170%
-    margin-bottom: 20px
-  img
-    height: auto
+    font-family: $fontSerif !important
+    font-size: 1.8rem !important
+    font-weight: 300 !important
+    line-height: 170% !important
+    font-size: 1.8rem !important
+    line-height: 170% !important
+    margin-bottom: 20px !important
+  figure
+    img
+      width: 100%
+      height: auto
   figcaption
     font-family: $fontSansSerif
     font-size: 1.6rem
     color: #888888
+    line-height: 140%
     margin-top: 10px
   blockquote
     margin: 40px 0px 40px 0px
@@ -205,6 +212,10 @@
 .article--noMargin
   blockquote
     margin: 40px 0px 40px 0px
+
+.blueimp-gallery>.title
+  font-family: $fontSansSerif
+  font-size: 1.6rem
 
 #disqus_thread
   margin: 40px 0px
