--- a/public/css/elements/sidebarMenu.sass
+++ b/public/css/elements/sidebarMenu.sass
@@ -1,9 +1,9 @@
 .sidebarMenu
-  font-family: $fontSansSerif
   overflow: hidden
   border-left: 2px solid #e6e6e6
   padding: 40px 0px 40px 60px
 .sidebarMenu__headline
+  font-family: $fontSansSerif
   font-size: 2rem
   font-weight: 400
   float: left
@@ -11,6 +11,6 @@
   margin-top: 0px
   margin-bottom: 15px
   a:hover
-    color: #019bce
+    color: $colorGrey
 .sidebarMenu__headline--active
-  border-bottom: 1px solid $colorTheme
+  border-bottom: 2px solid $colorTheme
