--- a/views/partials/slideshow.html.twig
+++ b/views/partials/slideshow.html.twig
@@ -11,7 +11,7 @@
     {% endfor %}
     {% if linkThumb and linkFull %}
       {% set imgCounter = imgCounter + 1 %}{% if imgCounter == 1 %}<h2>Article Gallery</h2>{% endif %}
-      <a href="{{ linkFull }}" title="{{ media.body }}" data-gallery><img src="{{ linkThumb }}" alt="{{ media.body }}" width="200" height="124"></a>
+      <a href="{{ linkFull }}" title="{{ media.body|striptags }}" data-gallery><img src="{{ linkThumb }}" alt="{{ media.body|striptags }}" width="200" height="124"></a>
       
     {% endif %}
   {% endif %}
