--- a/public/css/elements/_default.sass
+++ b/public/css/elements/_default.sass
@@ -22,6 +22,7 @@ body
   font-weight: 400
   color: $colorDark
   padding-top: 0px
+  overflow: auto !important
 
 h1,h2,h3,h4,h5,h6
   font-family: $fontRegular
