--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -15,6 +15,8 @@
 
   <meta name="google-site-verification" content="uJB4D5iTxa0pKz2QP1XiHFwa3lFd2F0oTcHd-bHpU2U" />
 
+  <meta name="robots" content="noindex">
+
  <!-- RSS & Pingback -->
   <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="{{ url('rss') }}">
 
