--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -95,7 +95,7 @@
 
         {% block logo %}
         <div class="verticalMiddle col-md-4 col-sm-4 col-xs-12">
-          <a class="header__logo" href="{{ url('home') }}"><img src="{{ asset('theme/img/logo.svg') }}"></a>
+          <a class="header__logo" href="{{ url('home') }}"><img src="{{ asset('theme/img/logo.png') }}"></a>
         </div>
         {% endblock %}
 
