--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -159,9 +159,9 @@
   <div class="container">
     <div class="row">
 
-      <!--div class="footer__logo col-md-3 col-sm-3 col-xs-12">
+      <div class="footer__logo col-md-3 col-sm-3 col-xs-12">
         <a href="{{ url('home') }}"><img src="{{ asset('theme/img/logo-white.svg') }}"></a>
-      </div-->
+      </div>
 
 {% container 'footerNav' %}
 
