--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -8,24 +8,13 @@
 				<div class="row">
 					<div class="col-md-8 col-sm-12 col-xs-12 pull-right">
 
-{# container 'topStories' with {
+{% container 'topStories' with {
 	'cssClass': 'col-md-8 col-sm-12 col-xs-12 pull-right'
 } %}
-We are not ready yet for manual content list widget on frontpage - ordering is random, and images are not ready to work with
-{% endcontainer #}
 
-						{% cache 'frontTop' { time:0 } %}
-						{% set topArt = null %}
-						{% gimmelist article from articles|start(0)|limit(7)|order('publishedAt','desc') %}
-						{% if loop.first %}
-						{% include 'partials/mainArticle.html.twig' %}
-						<div class="articleGrid row">
-						{% else %}
-						{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--twoColumns col-md-6 col-sm-6 col-xs-12'} %}
-						{% endif %}
-						{% endgimmelist %}
-						</div>
-						{% endcache %}
+<!-- Widget in this container is rendered using template widgets/topNews.html.twig -->
+
+{% endcontainer %}
 
 					</div>
 
