--- a/public/css/elements/navigation.sass
+++ b/public/css/elements/navigation.sass
@@ -4,7 +4,9 @@
   ul
     list-style: none
     padding-left: 0px
-    margin: 14px 40px
+    margin: 14px 20px
+    +sm
+      margin: 14px 40px
     li
       font-size: 2rem
       font-weight: 900
