--- a/views/widgets/listMost.html.twig
+++ b/views/widgets/listMost.html.twig
@@ -1,10 +1,8 @@
-{% set accordionIndex = contentList.id - 6 %}
+{% set accordionIndex = contentList.id %}
 {# This is because accordion script doesn't work properly if initial active tab is not having index #1. Our content lists here (Star Tribune) have ids #7, #8 and #9 #}
 
   <div class="accordion__section">
     <a class="accordion__sectionTitle {% if accordionIndex == 1 %}active{% endif %}" href="#accordion-{{ accordionIndex }}">{{ contentList.name }}</a>
-    
-    {# dump(contentList) #}
 
     <div id="accordion-{{ accordionIndex }}" class="accordion__sectionContent">
 
