Improvements in widget content lists

--- a/views/widgets/listMost.html.twig
+++ b/views/widgets/listMost.html.twig
@@ -1,5 +1,5 @@
-{% set accordionIndex = contentList.id %}
-{# This is because accordion script doesn't work properly if initial active tab is not having index #1. Our content lists here (Star Tribune) have ids #7, #8 and #9 #}
+{% set accordionIndex = listId %}
+{# This is because accordion script doesn't work properly if initial active tab is not having index #1. Our content lists here can have ids ie. #7, #8 and #9 and numbers need to be decreased by 6 #}
 
   <div class="accordion__section">
     <a class="accordion__sectionTitle {% if accordionIndex == 1 %}active{% endif %}" href="#accordion-{{ accordionIndex }}">{{ contentList.name }}</a>
@@ -7,14 +7,14 @@
     <div id="accordion-{{ accordionIndex }}" class="accordion__sectionContent">
 
 {% cache 'contentlist' ~ contentList.id { time: contentList.cacheLifeTime ?: 0 } %}
-    {% for item in contentList.items|slice(start, 5) %}
+    {% gimmelist item from contentListItems|limit(5) with { contentListId: listId } %}
     
     <article class="accordion__sectionItem">
-        <h4 class="accordion__sectionHeadline"><a href="{{ item.content.route.staticPrefix }}/{{ item.content.slug }}">{{ item.content.title }}</a></h4>
+        <h4 class="accordion__sectionHeadline"><a href="{{ url(item.content) }}">{{ item.content.title }}</a></h4>
         <span class="accordion__sectionCount">120.406 views</span>
     </article>
 
-    {% endfor %}
+    {% endgimmelist %}
 {% endcache %}
 
     </div>
