--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -160,7 +160,7 @@
     <div class="row">
 
       <div class="footer__logo col-md-3 col-sm-3 col-xs-12">
-        <a href="{{ url('home') }}"><img src="public/img/logo-white.png"></a>
+        <a href="{{ url('home') }}"><img src="/public/img/logo-white.png"></a>
       </div>
 
 {% container 'footerNav' %}
